<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="TrigonometricKeypad"
            type="com.example.antoniok.CalcAI.TrigPage"/>
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout style="@style/VerticalButtonLayout">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/niceBlue">

            <RelativeLayout style="@style/KeypadLeftStyle"/>
            <RelativeLayout style="@style/HorizontalButtonLayout">
                <Button style="@style/KeypadButtonStyle"
                    android:id="@+id/zero_zero_trig"
                    android:text="@string/button00trig"
                    android:background="@color/niceLightGreen"/>
            </RelativeLayout>
            <RelativeLayout style="@style/HorizontalButtonLayout">
                <Button style="@style/KeypadButtonStyle"
                    android:id="@+id/zero_one_trig"
                    android:text="@string/button01trig"
                    android:background="@color/niceLightGreen"/>
            </RelativeLayout>
            <RelativeLayout style="@style/HorizontalButtonLayout">
                <Button style="@style/KeypadButtonStyle"
                    android:id="@+id/zero_two_trig"
                    android:text="@string/button02trig"
                    android:background="@color/niceLightGreen"/>
            </RelativeLayout>
            <RelativeLayout style="@style/HorizontalButtonLayout">
                <Button style="@style/KeypadButtonStyle"
                    android:id="@+id/zero_three_trig"
                    android:text="@string/button03trig"
                    android:background="@color/niceRegularGreen"/>
            </RelativeLayout>
            <RelativeLayout style="@style/KeypadRightStyle"/>
        </LinearLayout>
    </RelativeLayout>
        <RelativeLayout style="@style/VerticalButtonLayout">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/niceLightPink">

                <RelativeLayout style="@style/KeypadLeftStyle"/>
                <RelativeLayout style="@style/HorizontalButtonLayout">
                    <Button style="@style/KeypadButtonStyle"
                        android:id="@+id/one_zero_trig"
                        android:text="@string/button10trig"
                        android:background="@color/niceLightGreen"/>
                </RelativeLayout>
                <RelativeLayout
                    style="@style/HorizontalButtonLayout">
                    <Button style="@style/KeypadButtonStyle"
                        android:id="@+id/one_one_trig"
                        android:text="@string/button11trig"
                        android:background="@color/niceLightGreen"/>
                </RelativeLayout>
                <RelativeLayout
                    style="@style/HorizontalButtonLayout">
                    <Button style="@style/KeypadButtonStyle"
                        android:id="@+id/one_two_trig"
                        android:text="@string/button12trig"
                        android:background="@color/niceLightGreen"/>
                </RelativeLayout>

                <RelativeLayout
                    style="@style/HorizontalButtonLayout">
                    <Button style="@style/KeypadButtonStyle"
                        android:id="@+id/one_three_trig"
                        android:text="@string/button13trig"
                        android:background="@color/niceRegularGreen"/>
                </RelativeLayout>
                <RelativeLayout style="@style/KeypadRightStyle"/>

            </LinearLayout>
        </RelativeLayout>
        <RelativeLayout style="@style/VerticalButtonLayout">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/niceLightYellow">

                <RelativeLayout style="@style/KeypadLeftStyle"/>
                <RelativeLayout style="@style/HorizontalButtonLayout">
                    <Button style="@style/KeypadButtonStyle"
                        android:id="@+id/two_zero_trig"
                        android:text="@string/button20trig"
                        android:background="@color/niceLightGreen"/>
                </RelativeLayout>
                <RelativeLayout style="@style/HorizontalButtonLayout">
                    <Button style="@style/KeypadButtonStyle"
                        android:id="@+id/two_one_trig"
                        android:text="@string/button21trig"
                        android:background="@color/niceLightGreen"/>
                </RelativeLayout>
                <RelativeLayout style="@style/HorizontalButtonLayout">
                    <Button style="@style/KeypadButtonStyle"
                        android:id="@+id/two_two_trig"
                        android:text="@string/button22trig"
                        android:background="@color/niceLightGreen"/>
                </RelativeLayout>

                <RelativeLayout style="@style/HorizontalButtonLayout">
                    <Button style="@style/KeypadButtonStyle"
                        android:id="@+id/two_three_trig"
                        android:text="@string/button23trig"
                        android:background="@color/niceRegularGreen"/>
                </RelativeLayout>
                <RelativeLayout style="@style/KeypadRightStyle"/>

            </LinearLayout>
        </RelativeLayout>
        <RelativeLayout style="@style/VerticalButtonLayout">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/niceLightBluey">

                <RelativeLayout style="@style/KeypadLeftStyle"/>
                <RelativeLayout style="@style/HorizontalButtonLayout">
                    <Button style="@style/KeypadButtonStyle"
                        android:id="@+id/three_zero_trig"
                        android:text="@string/button30trig"
                        android:background="@color/niceLightGreen"/>
                </RelativeLayout>
                <RelativeLayout style="@style/HorizontalButtonLayout">
                    <Button style="@style/KeypadButtonStyle"
                        android:id="@+id/three_one_trig"
                        android:text="@string/button31trig"
                        android:background="@color/niceLightGreen"/>
                </RelativeLayout>
                <RelativeLayout style="@style/HorizontalButtonLayout">
                    <Button style="@style/KeypadButtonStyle"
                        android:id="@+id/three_two_trig"
                        android:text="@string/button32trig"
                        android:background="@color/niceLightGreen"/>
                </RelativeLayout>
                <RelativeLayout style="@style/HorizontalButtonLayout">
                    <Button style="@style/KeypadButtonStyle"
                        android:id="@+id/three_three_trig"
                        android:text="@string/button33trig"
                        android:background="@color/niceRegularGreen"/>
                </RelativeLayout>
                <RelativeLayout style="@style/KeypadRightStyle"/>

            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout style="@style/VerticalButtonLayout">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/niceGrapePurple">

                <RelativeLayout style="@style/KeypadLeftStyle"/>
                <RelativeLayout style="@style/HorizontalButtonLayout">
                    <Button style="@style/KeypadButtonStyle"
                        android:id="@+id/four_zero_trig"
                        android:text="@string/button40trig"
                        android:background="@color/niceLightGreen"/>
                </RelativeLayout>
                <RelativeLayout style="@style/HorizontalButtonLayout">
                    <Button style="@style/KeypadButtonStyle"
                        android:id="@+id/four_one_trig"
                        android:text="@string/button41trig"
                        android:background="@color/niceLightGreen"/>
                </RelativeLayout>
                <RelativeLayout style="@style/HorizontalButtonLayout">
                    <Button style="@style/KeypadButtonStyle"
                        android:id="@+id/four_two_trig"
                        android:text="@string/button42trig"
                        android:background="@color/niceLightGreen"/>
                </RelativeLayout>
                <RelativeLayout style="@style/HorizontalButtonLayout">
                    <Button style="@style/KeypadButtonStyle"
                        android:id="@+id/four_three_trig"
                        android:text="@string/button43trig"
                        android:background="@color/niceRegularGreen"/>
                </RelativeLayout>
                <RelativeLayout style="@style/KeypadRightStyle"/>

            </LinearLayout>
        </RelativeLayout>

    </LinearLayout>
</layout>